# Multy-Robot-Transportation-Easy-Scene

./: README.md  SYSTEM_LOGIC.md  SYSTEM_LOGIC_CN.md  astar_planner.py  experiment_monitor_dashboard.py  gazebo_control_with_tasks.html  launch_system.py  matplotlib_ros_stream.py  task_scheduler_ros_clean.py
devel/: .catkin  local_setup.sh  setup.sh
devel/include/smart_factory_sim/: AssignTask.h  AssignTaskRequest.h  AssignTaskResponse.h  MachineState.h  MaterialInfo.h  ProcessMaterial.h  ProcessMaterialRequest.h  ProcessMaterialResponse.h  TaskStatus.h
devel/lib/pkgconfig/: smart_factory_sim.pc
devel/lib/python3/dist-packages/smart_factory_sim/msg/: _MachineState.py  _MaterialInfo.py  _TaskStatus.py  __init__.py
devel/lib/python3/dist-packages/smart_factory_sim/srv/: _AssignTask.py  _ProcessMaterial.py  __init__.py
devel/lib/smart_factory_sim/: robot_controller_node.py
devel/share/common-lisp/ros/smart_factory_sim/msg/: MachineState.lisp  MaterialInfo.lisp  TaskStatus.lisp  _package.lisp  _package_MachineState.lisp  _package_MaterialInfo.lisp  _package_TaskStatus.lisp  smart_factory_sim-msg.asd
devel/share/common-lisp/ros/smart_factory_sim/srv/: AssignTask.lisp  ProcessMaterial.lisp  _package.lisp  _package_AssignTask.lisp  _package_ProcessMaterial.lisp  smart_factory_sim-srv.asd
devel/share/gennodejs/ros/smart_factory_sim/msg/: MachineState.js  MaterialInfo.js  TaskStatus.js  _index.js
devel/share/gennodejs/ros/smart_factory_sim/srv/: AssignTask.js  ProcessMaterial.js  _index.js
devel/share/roseus/ros/smart_factory_sim/: manifest.l
devel/share/roseus/ros/smart_factory_sim/msg/: MachineState.l  MaterialInfo.l  TaskStatus.l
devel/share/roseus/ros/smart_factory_sim/srv/: AssignTask.l  ProcessMaterial.l
devel/share/smart_factory_sim/cmake/: smart_factory_sim-msg-extras.cmake  smart_factory_sim-msg-paths.cmake  smart_factory_simConfig.cmake
paper_materials/: chapter4_table_421_rows.tex  实验摘要报告.md  表2_LaTeX代码.tex  表2_算法对比数据.csv
src/smart_factory_sim/: CMakeLists.txt  QUICKSTART.md  README.md  TUTORIAL.md  package.xml
src/smart_factory_sim/config/: base_local_planner_params.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
src/smart_factory_sim/launch/: factory.launch  gazebo_factory.launch  move_base.launch  smart_factory_10_robots.launch
src/smart_factory_sim/maps/: factory_map.pgm  factory_map.yaml
src/smart_factory_sim/msg/: MachineState.msg  MaterialInfo.msg  TaskStatus.msg
src/smart_factory_sim/rviz/: factory_view.rviz
src/smart_factory_sim/scripts/: factory_manager_node.py  factory_web_controller.py  gazebo_robot_controller.py  setup_and_run.sh
src/smart_factory_sim/srv/: AssignTask.srv  ProcessMaterial.srv
src/smart_factory_sim/urdf/: agv_robot.urdf.xacro  agv_robot.urdf.xacro.bak
src/smart_factory_sim/worlds/: factory_floor.world  smart_factory.world  smart_factory_10robots.world  smart_factory_10robots.world.bak_scale5  smart_factory_colored_zones.world
templates/: monitor_dashboard.html
tools/: analyze_experiments.py  generate_paper_materials.py  generate_research_assets.py  run_experiments.py  update_chapter4_tables.py
