<?xml version="1.0"?>
<package format="2">
  <name>smart_factory_sim</name>
  <version>1.0.0</version>
  <description>智能工厂仿真系统 - ROS1 + Gazebo实现</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 核心依赖 -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  
  <!-- Gazebo依赖 -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  
  <!-- 导航依赖 -->
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  
  <!-- 机器人状态发布 -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  
  <!-- URDF/Xacro -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- 消息生成 -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
